# xenbase-ingest

./: .copier-answers.yml  CLAUDE.md  LICENSE  README.md  download.yaml  gene_to_phenotype.yaml  genepage-2-gene.yaml  justfile  non_entrez_orthologs.yaml  orthologs.yaml  pyproject.toml
.claude/skills/: create-koza-ingest.md
.github/workflows/: release.yaml  test.yaml
scripts/: download.py
src/: gene_to_phenotype.yaml  genepage-2-gene.yaml  non_entrez_orthologs.yaml  orthologs.yaml
src/xenbase_ingest/: __init__.py
tests/: test_gene_to_phenotype.py  test_non_entrez_orthologs.py  test_orthologs.py
